Wrap long line in post content, fix #232

--- a/src/Moonglade.Web/wwwroot/css/mooglade-css-bundle.css
+++ b/src/Moonglade.Web/wwwroot/css/mooglade-css-bundle.css
@@ -217,6 +217,7 @@
     font-size: 0.95rem;
     line-height: 1.6rem;
     margin-bottom: 15px;
+    word-wrap: break-word;
 }
 
 .post-content img {
