--- a/src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
+++ b/src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
@@ -197,6 +197,7 @@
     font-size: 0.95rem;
     line-height: 1.6rem;
     margin-bottom: 15px;
+    word-wrap: break-word;
 }
 
 .post-content img {
